# qeel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml
.claude/: notify.sh  settings.json
.claude/commands/: speckit.pr-fix.md  speckit.review.md  speckit.validate.md  speckit.verify.md
.claude/hooks/: auto-format.sh  notify.sh  prompt-logger.sh
.devcontainer/: devcontainer.json
.gemini/commands/: speckit.review.toml  speckit.validate.toml  speckit.verify.toml
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md
.specify/memory/: constitution.md
docs/: speckit-workflow.md
docs/prompt_logs/002-core-config-and-schemas/: implement.md
docs/prompt_logs/004-data-source-abc/: analyze.md  implement.md  raw.md  tasks.md  validate.md
docs/prompt_logs/005-calculator-abc/: analyze.md  implement.md  raw.md  tasks.md  validate.md
docs/prompt_logs/006-io-and-context-management/: raw.md
docs/prompt_logs/007-exchange-client-and-mock/: raw.md
docs/prompt_logs/008-portfolio-and-orders/: raw.md
docs/prompt_logs/009-strategy-engine/: raw.md
docs/requirements/: core.md  philosophy_memo.md
specs/001-qeel-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tasks_archive.md
specs/001-qeel-core/checklists/: requirements.md
specs/001-qeel-core/contracts/: base_context_store.md  base_data_source.md  base_entry_order_creator.md  base_exchange_client.md  base_executor.md  base_exit_order_creator.md  base_io.md  base_order_creator.md  base_portfolio_constructor.md  base_return_calculator.md  base_signal_calculator.md  base_symbol_selector.md  context_store.md
specs/001-qeel-core/tasks_archive/: 002-core-config-and-schemas.md  004-data-source-abc.md  005-calculator-abc.md  006-io-and-context-management.md  007-exchange-client-and-mock.md  (+1 more)
src/qeel/: __init__.py
tests/: conftest.py
tests/fixtures/: invalid_config.toml  ohlcv.parquet  valid_config.toml
tests/integration/: test_config_integration.py  test_data_source_integration.py  test_exchange_client_integration.py  test_io_integration.py  test_portfolio_order_integration.py  test_signal_calculator_integration.py  test_strategy_engine_integration.py
tests/unit/: test_config.py  test_context.py  test_context_store.py  test_data_sources.py  test_entry_order_creators.py  test_exchange_clients.py  test_exit_order_creators.py  test_io.py  test_params.py  test_portfolio_constructors.py  test_schemas.py  test_signal_calculator.py  test_strategy_engine.py  test_workspace.py
(+42 files in other folders)
