[project]
name = "qeel"
version = "0.1.0"
description = "A strictly reproducible quantitative trading framework bridging backtest and live execution."
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "polars>=1.35.2",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
    "slack-sdk>=3.23.0",
    "pyarrow>=14.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "moto[s3]>=4.2.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml:.pytest_cache/coverage.xml",
]
